--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,70 @@ td {
     padding: 8px;
 }
 
+/* --------- Footer --------*/
+
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin,cyrillic");
+* {
+    margin: 0;
+    padding: 0;
+}
+html {height: 100%;}
+* html body {height: 100%;}
+body {
+    min-height: 100%;
+    position: relative;
+}
+body {
+    background: #fafafa;
+}
+h1 {
+    font: 24px/28px 'Open Sans', sans-serif;
+    color: #555;
+    padding: 50px 0;
+    font-weight: 400;
+    text-align: center;
+}
+p {
+    padding: 20px;
+}
+#content {
+    padding-bottom: 100px;
+}
+#footer {
+    position: absolute;
+    bottom: 0;
+    background-color:slategrey;
+    width:100%;
+    height: 80px;
+    color: #ccc;
+    text-align: center;
+}
+
+.button {
+    text-decoration: none;
+    text-align: center;
+    padding: 4px 24px;
+    border: solid 1px #0c0d0d;
+
+    font: 24px "Courier New", Courier, monospace;
+    font-weight: bold;
+    color: #0e0f0f;
+    background-color: #787c7d;
+    background-image: -moz-linear-gradient(top, #787c7d 0%, #80888a 100%);
+    background-image: -webkit-linear-gradient(top, #787c7d 0%, #80888a 100%);
+    background-image: -o-linear-gradient(top, #787c7d 0%, #80888a 100%);
+    background-image: -ms-linear-gradient(top, #787c7d 0%, #80888a 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80888a', endColorstr='#80888a', GradientType=0);
+    background-image: linear-gradient(top, #787c7d 0%, #80888a 100%);
+    -webkit-box-shadow: -1px 4px 0px #0f0d0d;
+    -moz-box-shadow: -1px 4px 0px #0f0d0d;
+    box-shadow: -1px 4px 0px #0f0d0d;
+}
 
 
+/* --------- Footo-gallery describes --------*/
+
+.thumb img  {
+    margin-left: 40px;
+}
 
