--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,25 @@ p {
     box-shadow: -1px 4px 0px #0f0d0d;
 }
 
+.button1{
+    text-decoration:none;
+    text-align:center;
+    padding:9px 26px;
+    border:solid 1px #eff5f7;
+    -webkit-border-radius:0px 25px 25px 0px; 	 				 border-radius: 0px 25px 25px 0px; 					-moz-border-radius-topleft:0px; 					-moz-border-radius-topright:25px; 					-moz-border-radius-bottomleft:0px; 					-moz-border-radius-bottomright:25px;
+    font:14px "Arial Black", Gadget, sans-serif;
+    font-weight:bold;
+    color:#E5FFFF;
+    background-color:#080808;
+    background-image: -moz-linear-gradient(top, #080808 0%, #0a0a0a 100%);
+    background-image: -webkit-linear-gradient(top, #080808 0%, #0a0a0a 100%);
+    background-image: -o-linear-gradient(top, #080808 0%, #0a0a0a 100%);
+    background-image: -ms-linear-gradient(top, #080808 0% ,#0a0a0a 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a0a0a', endColorstr='#0a0a0a',GradientType=0 );
+    background-image: linear-gradient(top, #080808 0% ,#0a0a0a 100%);
+    -webkit-box-shadow:0px 0px 2px #bababa;  -moz-box-shadow: 0px 0px 2px #bababa;  box-shadow:0px 0px 2px #bababa;
+
+}
 
 /* --------- Footo-gallery describes --------*/
 
